14/09: Just some changes to improve organization

--- a/UcProgramacao/src/exercicio2/Exercicio2.fxml
+++ b/UcProgramacao/src/exercicio2/Exercicio2.fxml
@@ -39,7 +39,7 @@
             <VBox alignment="CENTER" fillWidth="false" prefHeight="130.0" prefWidth="690.0">
                <children>
                   <TextArea fx:id="txtResultado" prefHeight="92.0" prefWidth="339.0" />
-                  <Button mnemonicParsing="false" onAction="#atualizaFuncionarios" text="Atualizar funcionarios">
+                  <Button fx:id="btnAtualizaFuncionarios" disable="true" mnemonicParsing="false" onAction="#atualizaFuncionarios" text="Atualizar funcionarios">
                      <VBox.margin>
                         <Insets top="10.0" />
                      </VBox.margin>
