--- a/UcProgramacao/src/parimpar/ParImpar.fxml
+++ b/UcProgramacao/src/parimpar/ParImpar.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.layout.VBox?>
 
 
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="principal.ParImparController">
+<BorderPane xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/11.0.1" fx:controller="parimpar.ParImparController">
    <center>
       <VBox fillWidth="false" prefHeight="335.0" prefWidth="568.0" BorderPane.alignment="CENTER">
          <children>
