--- a/ProjetoProgramacao/src/application/Home.fxml
+++ b/ProjetoProgramacao/src/application/Home.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -10,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<BorderPane prefHeight="593.0" prefWidth="941.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.HomeController">
+<BorderPane prefHeight="593.0" prefWidth="941.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.HomeController">
    <top>
       <HBox alignment="CENTER" prefHeight="56.0" prefWidth="941.0" BorderPane.alignment="CENTER">
          <children>
@@ -25,7 +30,7 @@
    <left>
       <VBox prefHeight="537.0" prefWidth="215.0" BorderPane.alignment="CENTER">
          <children>
-            <Button fx:id="btnProfessores" minWidth="100.0" mnemonicParsing="false" onAction="#abreCadDiscplinas" prefHeight="30.0" prefWidth="219.0" text="Professores" textAlignment="CENTER">
+            <Button fx:id="btnProfessores" minWidth="100.0" mnemonicParsing="false" onAction="#abreTabProfessor" prefHeight="30.0" prefWidth="219.0" text="Professores" textAlignment="CENTER">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
@@ -36,7 +41,7 @@
                   <Insets bottom="8.0" left="5.0" right="5.0" top="8.0" />
                </padding>
             </Button>
-            <Button fx:id="btnAlunos" minWidth="100.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="223.0" text="Alunos" textAlignment="CENTER">
+            <Button fx:id="btnAlunos" minWidth="100.0" mnemonicParsing="false" onAction="#abreTabAluno" prefHeight="30.0" prefWidth="223.0" text="Alunos" textAlignment="CENTER">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
@@ -58,7 +63,7 @@
                   <Insets bottom="8.0" left="5.0" right="5.0" top="8.0" />
                </padding>
             </Button>
-            <Button fx:id="btnDisciplinas" minWidth="100.0" mnemonicParsing="false" onAction="#abreCadDiscplinas" prefHeight="30.0" prefWidth="226.0" text="Disciplinas" textAlignment="CENTER">
+            <Button fx:id="btnDisciplinas" minWidth="100.0" mnemonicParsing="false" onAction="#abreTabDiscplina" prefHeight="30.0" prefWidth="226.0" text="Disciplinas" textAlignment="CENTER">
                <VBox.margin>
                   <Insets bottom="5.0" left="10.0" right="10.0" top="5.0" />
                </VBox.margin>
